--- a/scss/content/_s_intro.scss
+++ b/scss/content/_s_intro.scss
@@ -1,5 +1,5 @@
 section#intro{
-  padding-top: 1em;
+  //padding-top: 1em;
 
   figure.ribbon{
     @include a_ribbon(bottom, 25%);
@@ -7,15 +7,17 @@ section#intro{
   }
 
   main{
+    background-color: $a_green;
+
     p{
       //width: 80%;
       font-size: .95em;
       font-weight: 300;
       line-height: 2em;
       text-align: justify;
-      padding: 0 1em;
+      padding: 2em 0 1em 0;
     }
-    @media (min-width: $large){padding: 4em;}
+    @media (min-width: $large){padding: 1em;}
   }
 
   blockquote{
