--- a/scss/base.scss
+++ b/scss/base.scss
@@ -19,6 +19,7 @@
 @import "content/s_futuro";
 @import "content/s_verde";
 @import "content/s_medible";
+@import "content/cintillo_frase";
 @import "content/s_comunidades";
 @import "content/s_buzon";
 @import "content/s_reclutamiento";
