--- a/scss/content/_globals.scss
+++ b/scss/content/_globals.scss
@@ -4,11 +4,64 @@ body{
   font-weight: 200;
 }
 
+.container{
+  z-index: 1;
+}
 section,header{
   position: relative;
   width: 100%;
   //swidth: 100vw;
   display: table;
+}
+
+section.skewed{
+  margin-bottom: 6em!important;
+  &::after{
+    content: '';
+    width: 100%;
+    height: 70%;
+    position: absolute;
+    background: inherit;
+    z-index:0;
+    bottom: -4em;
+    transform-origin: left bottom;
+    transform: skewY(-3deg);
+  }
+
+  &.preceded{
+      padding-top: 6em!important;
+      &::before{
+        content: '';
+        width: 100%;
+        height: 70%;
+        position: absolute;
+        background: inherit;
+        z-index: 0;
+        top: -4em;
+        transform-origin: left bottom;
+        transform: skewY(-3deg);
+    }
+  }
+
+  &.anteceded{
+    &+section{
+      &::before{
+        content: '';
+        width: 100%;
+        height: 70%;
+        position: absolute;
+        background: inherit;
+        z-index: 0;
+        top: -4em;
+        transform-origin: left bottom;
+        transform: skewY(-3deg);
+    }
+    }
+  }
+
+  &>*{
+    //z-index: 2;
+  }
 }
 
 button.hamburger{
