--- a/scss/base.scss
+++ b/scss/base.scss
@@ -11,7 +11,7 @@
 @import "content/globals";
 @import "content/s_hero";
 @import "content/s_intro";
-@import "content/s_intro";
+@import "content/s_puntos";
 @import "content/s_metropol";
 @import "content/s_movilidad";
 @import "content/cintillo_posible";
