--- a/css/base.css
+++ b/css/base.css
@@ -2019,30 +2019,98 @@ section#intro {
     section#intro main {
       padding: 1em; } }
 
-section#intro {
-  background-color: #c4e86b; }
-  section#intro figure.ribbon {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 417.5 1279.6'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%2300A49A;%7D .st1%7Bfill:%23B1CA07;%7D .st2%7Bfill:%238C9086;%7D .st3%7Bfill:%23B90066;%7D%0A%3C/style%3E%3Cpolygon class='st0' points='417.5 959.7 228.5 959.7 0 1279.6 189 1279.6 '/%3E%3Cpolygon class='st1' points='417.5 319.9 228.5 319.9 0 0 189 0 '/%3E%3Cpolygon class='st2' points='417.5 319.9 228.5 319.9 0 639.8 189 639.8 '/%3E%3Cpolygon class='st3' points='417.5 959.7 228.5 959.7 0 639.8 189 639.8 '/%3E%3C/svg%3E");
-    background-position: left bottom;
-    background-size: 140px;
-    background-repeat: repeat-y;
-    z-index: 10;
-    position: absolute;
-    width: 25%;
-    height: 100%;
-    right: 0;
-    margin: 0;
-    padding: 0;
-    bottom: 0; }
-  section#intro main p {
-    font-size: .95em;
-    font-weight: 300;
-    line-height: 2em;
-    text-align: justify;
-    padding: 2em 0 1em 0; }
-  @media (min-width: 960px) {
-    section#intro main {
-      padding: 1em; } }
+section#puntos {
+  background-color: #fefefe;
+  padding: 1.5em 0; }
+  section#puntos h1, section#puntos h3 {
+    margin: 0 auto;
+    text-align: center;
+    color: #646569; }
+  section#puntos h1 {
+    font-size: 3.5rem;
+    margin: 1em auto;
+    line-height: 1em; }
+  section#puntos h3 {
+    font-size: 2rem; }
+  section#puntos ul {
+    border-top: 1px solid #799900;
+    border-bottom: 1px solid #799900;
+    padding: 1em 0;
+    margin: .5em 0; }
+    section#puntos ul li {
+      margin: 0;
+      padding: 0;
+      display: inline-block;
+      list-style: none;
+      height: 9em;
+      overflow: hidden; }
+      section#puntos ul li h2 {
+        margin: 0;
+        color: #c4e86b;
+        font-size: 1.5em; }
+        section#puntos ul li h2 strong {
+          font-size: 2em;
+          display: block;
+          line-height: .75em; }
+      section#puntos ul li p {
+        height: 3.5em;
+        color: #3e3e3e;
+        line-height: 1.25em;
+        margin-top: .25em; }
+      @media (min-width: 960px) {
+        section#puntos ul li {
+          width: 30%;
+          padding: 1%; } }
+  section#puntos footer {
+    background-color: transparent;
+    padding: 1em 0; }
+    section#puntos footer .fa-chevron-down {
+      -webkit-animation: fadeInDown 1s ease 0.2s 1 both;
+      -moz-animation: fadeInDown 1s ease 0.2s 1 both;
+      animation: fadeInDown 1s ease 0.2s 1 both;
+      -webkit-animation-backface-visibility: hidden;
+      -moz-animation-backface-visibility: hidden;
+      -ms-animation-backface-visibility: hidden;
+      -o-animation-backface-visibility: hidden;
+      animation-backface-visibility: hidden;
+      color: #c4e86b;
+      font-size: 3em;
+      margin: 0 auto;
+      display: block; }
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20px); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0); } }
+
+@-moz-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(-20px); }
+  100% {
+    opacity: 1;
+    -moz-transform: translateY(0); } }
+
+@-o-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -o-transform: translateY(-20px); }
+  100% {
+    opacity: 1;
+    -o-transform: translateY(0); } }
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0); } }
 
 section#metropol {
   background-color: #3e3e3e;
