socialfeed.js implementation

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -7,6 +7,7 @@
 @import "components/hamburgers/hamburgers";
 @import "components/main_menu";
 @import "components/unslider";
+@import "components/social_feed";
 
 @import "content/globals";
 @import "content/s_hero";
