--- a/scss/content/_globals.scss
+++ b/scss/content/_globals.scss
@@ -14,6 +14,28 @@ section,header{
   display: table;
 }
 
+nav ul.sociales {
+  li{
+      display: inline-block;
+      .fa{
+          font-size: 2em;
+          padding:2em;
+          //margin-top: 50px;
+
+          &:hover, &:active{
+            color: $a_green;
+            background-color:transparent;
+          }
+      }
+  }
+
+  &::after{
+    content: "@astudilloqro";
+    display: block;
+    font-weight: 400;
+  }
+}
+
 section.skewed{
   margin-bottom: 6em!important;
   &::after{
