--- a/scss/base.scss
+++ b/scss/base.scss
@@ -8,6 +8,7 @@
 @import "components/main_menu";
 @import "components/unslider";
 @import "components/social_feed";
+@import "components/preloader";
 
 @import "content/globals";
 @import "content/s_hero";
