--- a/css/base.css
+++ b/css/base.css
@@ -1520,6 +1520,41 @@ div#panel {
   line-height: 1.5em;
   font-weight: 500; }
 
+#preloader {
+  color: #fefefe;
+  background-color: #3e3e3e;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  z-index: 1000; }
+  #preloader .wrapper {
+    width: 75%;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -60%);
+    -ms-transform: translate(-50%, -60%);
+    transform: translate(-50%, -60%); }
+    @media (min-width: 960px) {
+      #preloader .wrapper {
+        width: 25%; } }
+  #preloader img {
+    width: 50%;
+    margin: 0 auto;
+    display: block; }
+  #preloader h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    line-height: 1.5em;
+    font-weight: 400; }
+    #preloader h1 strong {
+      font-size: 2.5em; }
+
 body {
   overflow-y: scroll;
   font-family: "Gotham", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
