--- a/scss/components/_preloader.scss
+++ b/scss/components/_preloader.scss
@@ -29,10 +29,13 @@
     display: block;
   }
   h1{
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-transform: uppercase;
     line-height: 1.5em;
     font-weight: 400;
     strong{font-size: 2.5em;}
+    @media(min-width: $large){
+      font-size: 3rem;
+    }
   }
 }
