--- a/scss/content/_s_puntos.scss
+++ b/scss/content/_s_puntos.scss
@@ -45,7 +45,7 @@ section#puntos{
         height: 3.5em;
         color: $dark;
         line-height: 1.25em;
-        margin-top: .25em;
+        margin-top: 1em;
       }
 
       @media (min-width: $large){
