--- a/scss/content/_s_futuro.scss
+++ b/scss/content/_s_futuro.scss
@@ -9,7 +9,10 @@ section#futuro{
     line-height: 5rem;
     strong{font-size: 7rem;text-transform: uppercase;}
   }
-  p{font-size: 1.25em;}
+  p{
+    font-size: 1.25em;
+    display: table;
+  }
 
   .container{
     margin:0 auto;
