--- a/scss/content/_s_futuro.scss
+++ b/scss/content/_s_futuro.scss
@@ -10,8 +10,16 @@ section#futuro{
     strong{font-size: 7rem;text-transform: uppercase;}
   }
   p{
-    font-size: 1.25em;
-    display: table;
+    font-size: 1.75rem;
+    line-height: 2rem;
+    //background-color: crimson;
+    color: $w;
+    //padding: 0;
+  //  margin: 0;
+    color: inherit;
+    font: -apple-system-body;
+    margin-bottom: 3rem;
+
   }
 
   .container{
