--- a/scss/content/_s_verde.scss
+++ b/scss/content/_s_verde.scss
@@ -3,15 +3,24 @@ section#verde{
   color:$darkest;
 
   li{
-    font-size: 1.5em;
-    line-height: 1.125em;
-    padding-bottom: 1em;
-    padding-left: 3em;
+    font-size: 2.5rem;
+    line-height: 2.75rem;
+    padding-bottom: 2rem;
+    padding-left: 8rem;
+    border-bottom: 1px solid $a_green_dark;
+    margin-bottom: 2rem;
+    color:$dark;
+    min-height: 6rem;
+    font: -apple-system-body;
+
+
+    &:last-child{border-bottom: none;}
 
     &::before{
-      width: 3em;
-      padding-bottom: 3em;
-      margin: 0 auto 0 -3em    }
+      width: 5rem;
+      padding-bottom: 5rem;
+      margin: 0 auto 0 -8rem;
+    }
   }
 
   h1{color: $w;}
